<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lightning">Lightning</string>
    <string name="onChain">On-Chain</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="details">Details</string>
    <string name="amount">Amount</string>
    <string name="memo">Memo</string>
    <string name="shareDialogTitle">Choose App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="receive">Receive</string>
    <string name="optional">optional</string>
    <string name="next">Next</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="needHelp">Need help?</string>
    <string name="offline">offline</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="fee">Fee</string>
    <string name="confirmExit">Do you really want to quit Zap?</string>
    <string name="or">or</string>
    <string name="max_amount">Maximum Amount:</string>
    <string name="min_amount">Minimum Amount:</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="pay">Pay</string>
    <string name="date">Date</string>
    <string name="expiry">Expiry</string>
    <string name="expired">Expired</string>
    <string name="remaining">remaining</string>
    <string name="address">Address</string>
    <string name="transactionID">Transaction ID</string>
    <string name="channel">Channel</string>
    <string name="event">Event</string>
    <string name="preimage" translatable="false">Preimage</string>
    <string name="channel_event">Channel Event</string>
    <string name="scan_qr_code">Scan QR-Code</string>
    <string name="node">Node</string>
    <string name="funds_available">Available: %s</string>
    <string name="amount_invalid">The amount is invalid.</string>
    <string name="success">Success</string>
    <string name="suggested_peers">Suggested Peers</string>
    <string name="none">None</string>
    <string name="install">Install</string>
    <string name="continue_string">Continue</string>
    <string name="withdraw">Withdraw</string>
    <string name="unknown">Unknown</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="contribute">Contribute</string>
    <string name="privacy">Privacy</string>
    <string name="payee">Payee</string>
    <string name="open">Open</string>
    <string name="search">Search</string>
    <string name="confirmations">Confirmations</string>
    <string name="maximum_abbreviation">max</string>
    <string name="send">Send</string>
    <string name="notConnected">Not connected</string>
    <string name="save">Save</string>
    <string name="activity_receive">Receive</string>
    <string name="activity_send">Pay</string>
    <string name="activity_connectRemoteNode">Connect to remote node</string>
    <string name="activity_manage_channels">Lightning Channels</string>
    <string name="activity_manage_nodes">Manage Nodes</string>
    <string name="activity_advanced_settings">Advanced Settings</string>
    <string name="activity_node_details">Node Details</string>
    <string name="activity_identity">Node</string>
    <string name="activity_manage_contacts">Manage Contacts</string>
    <string name="activity_manage_contacts_send_mode">Send to…</string>
    <string name="activity_manage_contacts_open_channel_mode">Open channel with…</string>
    <string name="activity_contact_details">Contact Details</string>
    <string name="activity_manual_setup">Connection Data</string>
    <string name="activity_backup">Backup</string>
    <string name="activity_utxos">Coins (UTXOs)</string>
    <string name="activity_forwarding">Routing</string>
    <string name="navigation_node">Node</string>
    <string name="navigation_history">History</string>
    <string name="navigation_settings">Settings</string>
    <string name="pin_create">Create PIN</string>
    <string name="pin_confirm">Confirm PIN</string>
    <string name="pin_enter">Enter PIN</string>
    <string name="pin_enter_old">Enter old PIN</string>
    <string name="pin_enter_new">Enter new PIN</string>
    <string name="pin_confirm_new">Confirm new PIN</string>
    <string name="pin_entered_wrong">Wrong PIN</string>
    <string name="pin_entered_wrong_wait" comment="Parameters:  %1$s: Number of seconds to wait">Wait %1$s seconds.</string>
    <string name="pin_changed">PIN changed!</string>
    <string name="requested_payment">Requested</string>
    <string name="request_expired">Expired</string>
    <string name="internal">Internal</string>
    <string name="opened_channel">Channel opened</string>
    <string name="closed_channel">Channel closed</string>
    <string name="force_closed_channel">Channel force closed</string>
    <string name="filter_transactions">Filter transactions</string>
    <string name="normal_payments">Normal Payments</string>
    <string name="expired_requests">Expired Requests</string>
    <string name="no_transactions">No transactions</string>
    <string name="channel_capacity">Capacity</string>
    <string name="channel_local_balance">Your Balance</string>
    <string name="channel_remote_balance">Remote Balance</string>
    <string name="channel_no_alias">Unnamed</string>
    <string name="channel_remote_public_key">Remote Public Key</string>
    <string name="channel_funding_transaction">Funding Transaction</string>
    <string name="channel_state_open">open</string>
    <string name="channel_state_offline">offline</string>
    <string name="channel_state_pending_open">pending open</string>
    <string name="channel_state_pending_closing">pending close</string>
    <string name="channel_state_pending_force_closing">pending force close</string>
    <string name="channel_state_waiting_close">waiting close</string>
    <string name="no_channels">No channels</string>
    <string name="channel_closing_transaction">Closing Transaction</string>
    <string name="channel_close">Close Channel</string>
    <string name="channel_close_success">Channel closing successfully initiated</string>
    <string name="channel_close_force">Force Close Channel</string>
    <string name="channel_close_error">Channel close error</string>
    <string name="channel_close_confirmation">Do you really want to close the channel with:\n\n%s\n</string>
    <string name="channel_close_force_confirmation">Do you really want to force close the channel with:\n\n%1$s\n\nYour funds will be locked up for %2$s.</string>
    <string name="channel_close_time">Closing Time Delay</string>
    <string name="channel_open">Open Channel</string>
    <string name="channel_open_success">Channel opening successfully initiated</string>
    <string name="channel_open_error">Channel open error</string>
    <string name="private_channel">Private channel</string>
    <string name="channel_visibility_private">private</string>
    <string name="channel_visibility_public">public</string>
    <string name="channel_visibility">Visibility</string>
    <string name="setup_connect_heading">How do you want to use ZAP?</string>
    <string name="setup_connect_local_description">Create a wallet on this phone.</string>
    <string name="setup_connect_local_button">Create Wallet</string>
    <string name="setup_connect_remote_description">Remote control your own node.</string>
    <string name="setup_connect_remote_button">Connect to Remote Node</string>
    <string name="demo_setupNodeBtn">Connect Node</string>
    <string name="demo_setupNodeFirst">You first have to connect to a node.</string>
    <string name="demo_setupNodeFirstAvatar">You first have to connect to a node, before you can see your node information and your avatar.</string>
    <string name="send_lightningPayment">Send lightning payment</string>
    <string name="send_onChainPayment">Send on-chain payment</string>
    <string name="send_sendPayment">Send payment</string>
    <string name="send_success">Payment\nsuccessful</string>
    <string name="send_fail">Payment\nfailed</string>
    <string name="send_SendOnChainInstead">Send On-Chain</string>
    <string name="receive_generateRequest">Generate Request</string>
    <string name="receive_generateRequest_failed">Request generation failed.</string>
    <string name="receive_lightning_request">Lightning Request</string>
    <string name="receive_on_chain_request">On-Chain Request</string>
    <string name="receive_noActiveChannels">To receive Bitcoin over the lightning network, you first have to open channels.</string>
    <string name="receive_noIncomeBalance">To receive Bitcoin over the lightning network, at least one of your channels needs some balance on your counterpartys side.\n\nTo achieve that, you have to spend something on lightning network first.\n\nIn the manage channels area you can always see how much you are able to send or receive over the lightning network right now.</string>
    <string name="receive_requestFullfilled">Invoice\npaid</string>
    <string name="guardian_doNotShowAgain">Don\'t show again.</string>
    <string name="guardian_Title">Attention</string>
    <string name="guardian_reset">All security warnings are enabled again.</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_security">Security</string>
    <string name="settings_category_help">Help</string>
    <string name="settings_btcUnit">Bitcoin Unit</string>
    <string name="settings_currency">Second Unit</string>
    <string name="settings_language">Language</string>
    <string name="settings_hapticPin">Haptic PIN Feedback</string>
    <string name="settings_manageChannels">Manage Lightning Channels</string>
    <string name="settings_scramblePin">Scramble PIN Screen</string>
    <string name="settings_preventScreenRecording">Prevent Screen Recording</string>
    <string name="settings_hideTotalBalance">Hide total balance</string>
    <string name="settings_resetSecurityWarnings">Reset Security Warnings</string>
    <string name="settings_help">Need Help?</string>
    <string name="settings_reportIssue">Report an Issue</string>
    <string name="settings_about">About Zap</string>
    <string name="settings_changePin">Change/Remove PIN</string>
    <string name="settings_blockExplorer">Block Explorer</string>
    <string name="settings_addressType">Bitcoin Address Type</string>
    <string name="settings_lnRequestExpiryTitle">Lightning Request Expiry</string>
    <string name="drawer_menu_channels">Channels</string>
    <string name="drawer_menu_backup">Backup</string>
    <string name="drawer_menu_buy">Buy Bitcoin</string>
    <string name="support_contribute_description">Help improving Zap.</string>
    <string name="support_issue_description">Found a bug? Let us know!</string>
    <string name="support_privacy_description">We care about your privacy.</string>
    <string name="support_help_description">Visit our documentation.</string>
    <string name="backup_data_confirm_description">I have already backed up my seed and my channels and understand, that this backup does NOT help to recover my funds.\n\nI understand that this backup still contains all necessary information to access my funds. I therefore will use a secure password in the next step.</string>
    <string name="backup_data_confirm_headline">Please Confirm</string>
    <string name="backup_data_confirm">I confirm</string>
    <string name="backup_data_password_enter">Enter your password</string>
    <string name="backup_data_password_confirm">Confirm your password</string>
</resources>