<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingStart="15dp"
              android:paddingTop="20dp"
              android:paddingEnd="10dp"
              android:paddingBottom="10dp">

    <Switch
        android:id="@+id/switchNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/normal_payments"
        android:textSize="18sp"/>

    <Switch
        android:id="@+id/switchExpired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/expired_requests"
        android:textSize="18sp"/>

    <Switch
        android:id="@+id/switchInternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/internal"
        android:textSize="18sp"/>
</LinearLayout>