<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/data_backup_confirm_imageView_warning"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/data_backup_confirm_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_warning_24px"
        app:tint="@color/lightningOrange" />

    <TextView
        android:id="@+id/data_backup_confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/backup_data_confirm_headline"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/data_backup_confirm_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/data_backup_confirm_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/backup_data_confirm_description"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/data_backup_confirm_checkbox_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/data_backup_confirm_checkbox_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/backup_data_confirm"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/data_backup_confirm_continue_button"
        app:layout_constraintStart_toStartOf="@+id/data_backup_confirm_continue_button" />

    <Button
        android:id="@+id/data_backup_confirm_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_clickable_item"
        android:enabled="false"
        android:text="@string/continue_string"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/data_backup_confirm_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/data_backup_confirm_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/lightningOrange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>