<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <TextView
        android:id="@+id/pw_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/backup_data_password_enter"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pw1_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/pw_title" />

    <TextView
        android:id="@+id/pw2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/backup_data_password_confirm"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/pw1_input" />

    <EditText
        android:id="@+id/pw2_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/pw2_title" />

    <Button
        android:id="@+id/data_backup_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_clickable_item"
        android:text="@string/continue_string"
        android:textAllCaps="false"
        android:textColor="@color/lightningOrange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>